<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/menu_item_devices"
            app:showAsAction="ifRoom" />

        <!--        <item-->
        <!--            android:title="Switch!"-->
        <!--            app:actionViewClass="android.widget.Switch"-->
        <!--            app:showAsAction="always" />-->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_item_settings"
            app:showAsAction="ifRoom" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_item_share"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_item_rate_app"
            app:showAsAction="ifRoom" />
    </group>

</menu>